# blocos

./: .gitignore  README.md  application.conf  blocos.cabal
app/: Main.hs
client/: index.html  main.js
client/elm-stuff/0.19.0/: Main.elmi  Main.elmo
client/src/: Main.elm
sql/: create_table_users.sql
src/: Application.hs  Application_flymake.hs  Example.hs  Middleware.hs  Service.hs  Service_flymake.hs
src/Types/: User.hs  User_flymake.hs
test/: Spec.hs
